prevented item title from wrapping

--- a/openloops.styl
+++ b/openloops.styl
@@ -484,6 +484,7 @@ footer
 }
 
 #header-main-title
+	overflow: ellipsis;
 	padding:10px
 	font-size 2rem
 	margin-left 10px
